# exchange_base_rule

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-30-okx-doc-monitor.md  2026-07-01-phase0-multi-exchange-core.md  2026-07-01-phase1-binance-adapter.md  2026-07-01-phase2-bybit-adapter.md
docs/superpowers/specs/: 2026-06-30-okx-doc-monitor-design.md  2026-07-01-multi-exchange-monitor-design.md
scripts/: capture_fixtures.py  run_daily.bat  run_daily.sh
src/exchange_monitor/: __main__.py  adapter.py  config.py  fetcher.py  logsetup.py  models.py  monitor.py  parse.py  report.py  slack.py  snapshot.py
src/exchange_monitor/exchanges/: binance.py  bybit.py  okx.py
src/okx_monitor/: __main__.py  config.py  fetcher.py  models.py  monitor.py  parse.py  report.py  slack.py
tests/: conftest.py  test_binance_adapter.py  test_binance_parse.py  test_bybit_adapter.py  test_bybit_parse.py  test_fetcher_429.py  test_fetcher_headers.py  test_fetcher_live.py  test_models_multi.py  test_monitor.py  test_okx_adapter.py  test_parse.py  test_report.py  test_slack.py  test_snapshot.py
tests/fixtures/: ann_del.json  ann_new.json  article.html  binance_ann_del.json  binance_ann_new.json  binance_detail.json  binance_faq_leaf36_p2.json  binance_faq_tree.json  binance_faq_tree3.json  bybit_ann_del.json  bybit_ann_new.json  bybit_article.html  bybit_topic.html  category.json  doc_list.json  fees.html  okx_docs_perp.json  okx_docs_risk.json  okx_docs_spot.json
