[project]
name = "okx-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "majuan", email = "majuan@cyberx.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "selectolax>=0.4.10",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = ["live: 需要真实网络与代理，默认手动运行"]
addopts = "-m 'not live'"
